--- a/resume.html
+++ b/resume.html
@@ -11,11 +11,13 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
-	<title>Donovan's Resume</title>
-	
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<title>Donovan's Home Page</title>
+    
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="styles/reset.css">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
@@ -40,29 +42,30 @@ Headers is visible or hidden depending on the size of the browser
 =========================================================================
 -->
 
-<header id="pageheader" class="d-none d-xl-block">
+<header id="pageheader1" class="d-none d-xl-block">
+    <a id="top"></a>
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
             <!-- logo -->
-            <a class="navbar-brand " href="index.html"><img src="images/donovanlogo150x131.png" /></a>
+            <a class="navbar-brand img-fluid" href="index.html"><img src="images/donovanlogo150x131.png" /></a>
 
                 <!-- Hamburger -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                     </button>
                 <!-- Main Navigation -->
-                <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
+                <div class="navbarlink collapse navbar-collapse" id="navbarNav1" style="justify-content: flex-end">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item active"><a class="nav-link" href="resume.html">Resume<span class="sr-only">(current)</span></a></li>
-                        <li class="nav-item "><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     </ul>
                </div>    
         </div>
     </nav>
 </header>
 
-<header id="pageheader" class="d-block d-xl-none">
+<header id="pageheader2" class="d-block d-xl-none">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
@@ -73,11 +76,11 @@ Headers is visible or hidden depending on the size of the browser
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                     </button>
                 <!-- Main Navigation -->
-                <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
+                <div class="navbarlink collapse navbar-collapse" id="navbarNav2" style="justify-content: flex-end">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item active"><a class="nav-link" href="resume.html">Resume<span class="sr-only">(current)</span></a></li>
-                        <li class="nav-item "><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     </ul>
                </div>    
         </div>
@@ -137,13 +140,13 @@ Main Content section
                 <div class="row">
                     <div class="col">
                         <h1>Certificates and Projects</h1>
-                            <ul>
-                                <li>xxx</li>
-                                <li>xxx</li>
-                                <li>xxx</li>
-                                <li>xxx</li>
-                            </ul>
-                        </div>
+                        <ul>
+                            <li>xxx</li>
+                            <li>xxx</li>
+                            <li>xxx</li>
+                            <li>xxx</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6">
@@ -163,128 +166,109 @@ Main Content section
 
 <!--
 =========================================================================
-
 Footer section
-
 =========================================================================
 -->
-	<footer id="#pagefooter">
-
-		<!-- Pagination component -->
-
-		<nav aria-label="Page navigation" id="pagenavigation">
-			<ul class="pagination pagination-circle pg-blue pagination-md justify-content-center">
-				<li class="page-item ">
-					<a class="page-link" aria-label="Previous">
-						<span aria-hidden="true"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></span>
-						<span class="sr-only">Previous</span> <!-- @@@ to edit accordingly for different page -->
-					</a>
-				</li>
-				<li class="page-item"><a class="page-link">1</a></li>
-				<!-- @@@ to edit accordingly for different page -->
-				<li class="page-item active"><a class="page-link">2</a><span class="sr-only">(current)</span></li>
-				<li class="page-item"><a class="page-link">3</a></li>
-				<li class="page-item">
-					<a class="page-link" aria-label="Next">
-						<span aria-hidden="true"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</li>
-			</ul>
-		</nav>
-
-		<!-- Contact Me section -->
-		<div id="pagefootermiddle" class="container-fluid">
-			<section>
-				<div class="container">
-					<div class="row">
-						<div class="col-12 col-sm-4">
-							<h1>Contact Information</h1>
-							<p class="contactitem">
-								<i class="fa fa-phone" aria-hidden="true"></i><span class="sr-only">Mobile</span>
-								<my-contact number-user="+65 9683" number-domain=" 6694">@</my-contact>
-							</p>
-							<p class="contactitem">
-								<i class="fa fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span>
-								<!-- Set data-user and data-domain as your  mail username and domain respectively -->
-								<my-email data-user="donovan.lo" data-domain="mensa.org.sg">@</my-email>
-							</p>
-							<p class="contactitem">
-								<i class="fa fa-linkedin" aria-hidden="true"></i><span class="sr-only">LinkedIn</span><a
-									href="https://linkedin.donovan.sg">https://linkedin.donovan.sg</a></p>
-							<p class="contactitem">
-								<i class="fa fa-user-circle-o" aria-hidden="true"></i><span class="sr-only">Profile</span><a
-									href="https://www.donovanlo.sg">https://www.donovanlo.sg</a></p>
-						</div>
-						<div class="col-12 col-sm-8">
-							<h1>Contact Me Form</h1>
-
-						</div>
-
-					</div>
-				</div>
-			</section>
-		</div>
-
-
-		<!-- Site Map Navigation -->
-		<nav aria-label="Site Map navigation">
-			<section id="footer-sitemap" class="container">
-				<ul class="row ">
-					<li class="col-12 col-sm-6 col-md-3"><a href="index.html:" class="sitemap-header">Home</a>
-						<ul class="footer-sitemap-li">
-							<li><a href="index.html#bio">Bio</a></li>
-							<li><a href="index.html#value-proposition">Value Proposition</a></li>
-							<li><a href="index.html#motivator">Motivator</a></li>
-							<li><a href="index.html#interest">Interest</a></li>
-							<li><a href="index.html#testimonials">Testimonials</a></li>
-							<li><a href="index.html#membership">Membership</a></li>
-							<li><a href="index.html#personality-test">Personality Test Result</a></li>
-						</ul>
-					</li>
-					<li class=" col-12 col-sm-6 col-md-3"><a href="resume.html" class="sitemap-header">Resume</a>
-						<ul class="footer-sitemap-li">
-							<li><a href="resume.html#objective">Objective</a></li>
-							<li><a href="resume.html#relevant-summary">Relevant Skills</a></li>
-							<li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
-							<li><a href="resume.html#education">Education</a></li>
-							<li><a href="resume.html#skills">Skills</a></li>
-							<li><a href="resume.html#certificates">Certificates</a></li>
-							<li><a href="resume.html#volunteering-experience">Volunteering Experience</a></li>
-						</ul>
-					</li>
-					<li class=" col-12 col-sm-6 col-md-3">
-						<a href="portfolio.html" class="sitemap-header">Portfolio</a>
-						<ul class=" footer-sitemap-li ">
-							<li><a href="portfolio.html#project-1 ">Project #1</a></li>
-							<li><a href="portfolio.html#project-2 ">Project #2</a></li>
-							<li><a href="portfolio.html#project-3 ">Project #3</a></li>
-							<li><a href="portfolio.html#project-4 ">Project #4</a></li>
-						</ul>
-					</li>
-					<li class="sitemap-header">
-					<li><a href="resume.html" class="download-resume">Download</a></li>
-					</li>
-				</ul>
-				&nbsp;
-			</section>
-
-
-		</nav>
-
-
-
-
-
-	</footer>
-
-
-
-
-
-
-
-
+    <footer id="pagefooter">
+        <!-- Pagination component -->
+        <nav aria-label="Page navigation" id="pagenavigation">
+            <ul class="pagination pagination-circle pg-blue pagination-md justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link" aria-label="Previous" tabindex="-1">
+                        <span aria-hidden="true"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></span>
+                        <span class="sr-only">Previous</span> <!-- `@@ to edit accordingly for different page -->
+                    </a>
+                </li>
+                <li class="page-item active"><a class="page-link">1 <span class="sr-only">(current)</span></a></li>
+                <!-- @@@ to edit accordingly for different page -->
+                <li class="page-item"><a class="page-link" href="resume.html">2</a></li>
+                <li class="page-item"><a class="page-link" href="portfolio.html">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" aria-label="Next" href="resume.html">
+                        <span aria-hidden="true"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- Contact Me section -->
+        <div id="pagefootermiddle" class="container-fluid">
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-sm-4">
+                            <h1>Contact Information</h1>
+                            <p class="contactitem">
+                                <i class="fa fa-phone" aria-hidden="true"></i><span class="sr-only">Mobile</span>
+                                <my-contact number-user="+65 9683" number-domain=" 6694"></my-contact>
+                            </p>
+                            <p class="contactitem">
+                                <i class="fa fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span>
+                                <!-- Set data-user and data-domain as your  mail username and domain respectively -->
+                                <my-email data-user="donovan.lo" data-domain="mensa.org.sg">@</my-email>
+                            </p>
+                            <p class="contactitem">
+                                <i class="fa fa-linkedin" aria-hidden="true"></i><span class="sr-only">LinkedIn</span> <a
+                                    href="https://linkedin.donovan.sg">https://linkedin.donovan.sg</a></p>
+                            <p class="contactitem">
+                                <i class="fa fa-user-circle-o" aria-hidden="true"></i><span class="sr-only">Profile</span> <a
+                                    href="https://www.donovanlo.sg">https://www.donovanlo.sg</a></p>
+                        </div>
+                        <div class="col-12 col-sm-8">
+                            <h1>Contact Me Form</h1>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+ 
+        <!-- Site Map Navigation -->
+        <nav aria-label="Site Map navigation">
+            <section id="footer-sitemap" class="container">
+                <ul class="row ">
+                    <li class="col-12 col-sm-6 col-md-4"><a href="index.html#top" class="sitemap-header">Home</a>
+                        <ul class="footer-sitemap-li">
+                            <li><a href="index.html#bio">Bio</a></li>
+                            <li><a href="index.html#value-proposition">Value Proposition</a></li>
+                            <li><a href="index.html#motivator">Motivator</a></li>
+                            <li><a href="index.html#interest">Interest</a></li>
+                            <li><a href="index.html#testimonials">Testimonials</a></li>
+                            <li><a href="index.html#membership">Membership</a></li>
+                            <li><a href="index.html#personality-test">Personality Test Result</a></li>
+                        </ul>
+                    </li>
+                    <li class=" col-12 col-sm-6 col-md-4"><a href="resume.html#top" class="sitemap-header">Resume</a>
+                        <ul class="footer-sitemap-li">
+                            <li><a href="resume.html#objective">Objective</a></li>
+                            <li><a href="resume.html#relevant-summary">Relevant Skills</a></li>
+                            <li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
+                            <li><a href="resume.html#education">Education</a></li>
+                            <li><a href="resume.html#skills">Skills</a></li>
+                            <li><a href="resume.html#certificates">Certificates</a></li>
+                            <li><a href="resume.html#volunteering-experience">Volunteering Experience</a></li>
+                        </ul>
+                    </li>
+                    <li class=" col-12 col-sm-6 col-md-4">
+                        <a href="portfolio.html#top" class="sitemap-header">Portfolio</a>
+                        <ul class=" footer-sitemap-li ">
+                            <li><a href="portfolio.html#project-1 ">Project #1</a></li>
+                            <li><a href="portfolio.html#project-2 ">Project #2</a></li>
+                            <li><a href="portfolio.html#project-3 ">Project #3</a></li>
+                            <li><a href="portfolio.html#project-4 ">Project #4</a></li>
+                            <li></li>
+                            <li class="sitemap-header"><a href="resume.html" class="download-resume">Download Resume</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                 
+            </section>
+ 
+        </nav>
+ 
+ 
+ 
+ 
+    </footer>
 
 
 
